Adjusting media changes location to see if it fixes the horizontal overlap problem

--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,6 @@
 /* Import Fonts */
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap");
 
-/* Mobile Screen Adjustments */
-@media screen and (max-width: 400px) {
-  nav a {
-    float: none;
-    text-align: center;
-  }
-  .flex-container {
-    display: block;
-    width: 95%;
-  }
-}
-
 /* Components */
 /* Navigation */
 /* Text Component 1: Nav Bar*/
@@ -45,6 +33,10 @@ a.active {
   background-color: #e6e6e6;
   color: #0757a3;
 }
+/* Mobile Screen Adjustments */
+@media screen and (max-width: 400px) {
+  
+}
 
 /* Graphical Component 1: About Articles */
 .flex-container {
@@ -70,6 +62,18 @@ a.active {
 .flex-item img {
   width: 100%;
   height: auto;
+}
+
+/* Mobile Screen Adjustments */
+@media screen and (max-width: 400px) {
+  nav a {
+    float: none;
+    text-align: center;
+  }
+  .flex-container {
+    display: block;
+    width: 93%;
+  }
 }
 
 /* Graphical Component 2: Blog Post */
